@@ -4,6 +4,7 @@ require 'druid/page_factory'
 require 'druid/core_ext/string'
 require 'druid/element_locators'
 require 'druid/page_populator'
+require 'druid/sections'
 require 'druid/javascript_framework_facade'
 
 # require 'watir-webdriver/extensions/alerts'
@@ -39,25 +40,31 @@ module Druid
   include Assist
   include ElementLocators
   include PagePopulator
-  # include Watir::AlertHelper
+
   # @return [Watir::Browser] the drvier passed to the constructor
   attr_reader :driver
+
   #
   # Construct a new druid. Prior to browser initialization it will call
   # a method named initialize_accessors if it exists. Upon initialization of
   # the page it will call a method named initialize_page if it exists
   #
-  # @param [Watir::Browser] the driver to use
+  # @param [Watir::Browser, Watir:HTMLElement] the driver/element to use
   # @param [bool] open the page if page_url is set
   #
-  def initialize(driver, visit=false)
+  def initialize(root, visit=false)
     initialize_accessors if respond_to?(:initialize_accessors)
-    if driver.is_a? Watir::Browser
-      @driver ||= driver
-      goto if visit && respond_to?(:goto)
-      initialize_page if respond_to?(:initialize_page)
+    initialize_driver root
+    goto if visit && respond_to?(:goto)
+    initialize_page if respond_to?(:initialize_page)
+  end
+
+  def initialize_driver root
+    if root.is_a? Watir::HTMLElement || root.is_a?(Watir::Browser)
+      @root_element = Elements::Element.new root
+      @driver = root
     else
-      raise ArgumentError, "expect Watir::Browser"
+      raise ArgumentError, "expect Watir::Browser or Watir::HTMLElement"
     end
   end
 
@@ -136,7 +143,7 @@ module Druid
   # Returns the text of the current page
   #
   def text
-    driver.text
+    root.text
   end
 
   #
@@ -410,6 +417,12 @@ module Druid
 
   def call_block(&block)
     block.arity == 1 ? block.call(self) : self.instance_eval(&block)
+  end
+
+  private
+
+  def root
+    @root_element
   end
 
 end
